[package]
name = "crusty-n3xb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.3"
typetag = "0.2"

iso_currency = { version = "0.4.3", features = ["with-serde"] }