[package]
name = "crusty-n3xb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2"
nostr-sdk = "0.22"

iso_currency = { version = "0.4.3", features = ["with-serde"] }