[package]
name = "crusty-n3xb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
nostr-sdk = "0.22"

iso_currency = { version = "0.4.3", features = ["with-serde"] }

[dev-dependencies]
anyhow = "1.0"
hyper = "0.14"
mockall = "0.11"
nostr-rs-relay = "0.8"
tracing = "0.1"
tracing-subscriber = "0.2.0"